Bug 368739 - dimmed screen much too dark
Summary: dimmed screen much too dark
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
: 372409 377723 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-13 11:01 UTC by arne anka
Modified: 2022-09-04 10:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arne anka 2016-09-13 11:01:24 UTC
when taking a screenshot the screen is initially dimmed, and only the selected area lights up.
but the dimmed screen is so dark, that it is difficult to distinguish anything -- one mostly has to remember where the desired part is, and hope to hit the right place withe the mouse.

Reproducible: Always
Comment 1 Peter Wu 2016-10-11 23:10:02 UTC
At Preferences (click the arrow next to the save button) you can select a bright background. Does this help?

Personally I think that the dark overlay is too dark and that the bright overlay is too bright (it is like a flashlight). Especially with the default Plasma theme (Breeze) which has a dark cursor, the current choice is suboptimal. Thoughts?
Comment 2 Nate Graham 2017-10-18 17:26:32 UTC
*** Bug 372409 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2017-10-18 17:27:53 UTC
*** Bug 377723 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2017-10-21 18:58:16 UTC
Patch available: https://phabricator.kde.org/D8408

This makes the dark overlay much less dark, and the light overlay much less washed out.
Comment 5 Nate Graham 2017-10-25 16:06:53 UTC
Git commit ef85b910752f8fb160fe3378b9a82b79d1384fa6 by Nathaniel Graham.
Committed on 25/10/2017 at 16:06.
Pushed by ngraham into branch 'master'.

Make dark overlay less dark, and light overlay less washed out

Summary:

Spectacle's default dark overlay is now much less dark, making it easier to see the cursor as well as the screen content. The optional light overlay is now less strong, so screen content doesn't seem so washed out.

Test Plan:
Tested in KDE Neon. New dark overlay:
{F5442040}

New light overlay:
{F5442041}

Reviewers: #spectacle, broulik, #kde_applications

Reviewed By: broulik

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D8408

M  +1    -1    src/QuickEditor/EditorRoot.qml
M  +1    -1    src/QuickEditor/QuickEditor.cpp

https://commits.kde.org/spectacle/ef85b910752f8fb160fe3378b9a82b79d1384fa6
Comment 6 David P. 2017-10-26 06:53:36 UTC
I agree, with latest KDE Neon, the situation has improved. :-)