Make dark overlay less dark, and light overlay less washed out

Summary:
BUG: 368739

Spectacle's default dark overlay is now much less dark, making it easier to see the cursor as well as the screen content. The optional light overlay is now less strong, so screen content doesn't seem so washed out.

Test Plan:
Tested in KDE Neon. New dark overlay:
{F5442040}

New light overlay:
{F5442041}

Reviewers: #spectacle, broulik, #kde_applications

Reviewed By: broulik

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D8408